Integrated frontend react app with the backend

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 django
 djangorestframework
 djangorestframework-simplejwt
+django-cors-headers
 python-decouple
+whitenoise
 dj-database-url
 gunicorn
 psycopg2-binary
